[tool.poetry]
name = "pushkin"
version = "0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.4"
mike = "^2.0.0"
mkdocs-open-in-new-tab = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
